@@ -28,6 +28,7 @@ namespace bt
 	class SHA1Hash;
 	class Cache;
 	class PieceData;
+	class PieceDataPtr;
 
 	/**
 	 * @author Joris Guisson
@@ -69,14 +70,14 @@ namespace bt
 		 * @param read_only Is this for reading the piece or for writing
 		 * @return Pointer to the PieceData
 		 */
-		PieceData* getPiece(Uint32 off,Uint32 len,bool read_only);
+		PieceDataPtr getPiece(Uint32 off,Uint32 len,bool read_only);
 		
 		/**
 		 * Save a piece
 		 * @param off Offset of the piece
 		 * @param len Length of the piece
 		 */
-		void savePiece(PieceData* piece);
+		void savePiece(PieceDataPtr piece);
 
 		/// Get the chunks status.
 		Status getStatus() const {return status;}
