@@ -28,6 +28,7 @@ Changes in 4.0beta2:
 - Reset bandwidth schedule when network comes up again (227423)
 - Make sure TOS is set when setting up a connection
 - Fix crash in AuthenticationMonitor, caused by dangling pointer (228395)
+- Fix SHA1 hash generation crashes by using shared pointers to PieceData (227400)
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
